--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,3 +12,10 @@ services:
                      - "@doctrine"
                  tags:
                      - {name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin}
+    maklarresurs_app.mailer:
+                class: Maklarresurs\AppBundle\Mailer\Mailer
+                arguments:
+                    - "@mailer"
+                    - "@router"
+                    - "@twig"
+                    - "@service_container"
