--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,6 +13,11 @@ maklarresurs_admin:
     type:     annotation
     prefix:   /admin
 
+maklarresurs_supplier:
+    resource: "@MaklarresursSupplierBundle/Controller/"
+    type:     annotation
+    prefix:   /supplier
+
 _login_check:
     pattern: /login_check
 
