First release updated

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,7 +19,9 @@ security:
                     login_path: /login
                     use_referer: true
                 provider: fos_userbundle
-                logout:       true
+                logout:
+                    path:   /logout
+                    target: /login
                 anonymous:    true
 
     access_control:
